# dbt_airflow_pipeline

./: .gitignore  .user.yml  README.md  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: load_data_into_gcs.py
dbt_big_query_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_big_query_project/models/: sources.yml
dbt_big_query_project/models/gold/: dim_accident.sql  dim_city.sql  dim_region.sql  fct_accidents.sql
dbt_big_query_project/models/staging/: stg_accidents_brazil.sql  stg_acidentes_brasil.sql
include/dbt/: cosmos_config.py  profiles.yml
include/dbt/models/gold/: dim_time.sql
